@@ -1,4 +1,5 @@
-// Copyright (C) 2011 EPITA Research and Development Laboratory (LRDE)
+// Copyright (C) 2011, 2012 EPITA Research and Development Laboratory
+// (LRDE)
 //
 // This file is part of Olena.
 //
@@ -48,8 +49,6 @@
 
 #include <mln/core/alias/point2d.hh>
 
-// extern mln::image2d<bool> skewness_pbm;
-
 namespace scribo
 {
 
@@ -89,25 +88,12 @@ namespace scribo
 
 # ifndef MLN_INCLUDE_ONLY
 
-      // bool b;
-      // double skewness_;
-
       inline
       double
       sauvola_formula::operator()(const double m_x_y, const double s_x_y,
 				  const double K, const double R) const
       {
-	// if (b)
-	//   std::cout << skewness_ << " - " << (K * -1 * skewness_) << std::endl;
-	// volatile double new_t = ((skewness_ < 0) ? -skewness_ : 1 * m_x_y * (1.0 + K * ((s_x_y / R) - 1.0)));
-	// volatile double old_t = (m_x_y * (1.0 + K * ((s_x_y / R) - 1.0)));
-	// if (skewness_ > 0)
-	//   if (new_t != old_t)
-	//     std::cout << skewness_ << " - " << new_t << " vs " << old_t << std::endl;
-	// if (skewness_pbm(p))
 	  return  m_x_y * (1.0 + K * ((s_x_y / R) - 1.0));
-	// else
-	//   return  (255 - m_x_y) * (1.0 + K * ((s_x_y / R) - 1.0));
       }
 
       inline
